Answering the question

--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -580,7 +580,9 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** WRITE YOUR ANSWER HERE!"
+    "**Answer:** Analyzing the Healthy Loans (0), we can determine this model works very good when it comes to predicting with a precision of 1.00 and a recall of 0.99. This means that it correctly identifies almost every healthy loan with an exception of a few false positives (102) and false negatives (56).\n",
+    "\n",
+    "On the other hand, analyzing the High-Risk Loans (1), the model works reasonably well, obtaining a precision of 0.85 and a recall of 0.91. This means that while it is a good model, it is not as good and precise as the Healthy Loans model. It had some high-risk loans that were wrongly classified as healthy (56 false negatives)."
    ]
   },
   {
